contain within playfield to prevent scrollbars

--- a/css/game.css
+++ b/css/game.css
@@ -1,5 +1,18 @@
 @import url('../engine/css/main.css');
 
+body {    
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+#playField {
+    
+    width: 100%;
+    height: 99%;
+    overflow: auto;
+}
+
 .player {
     background-color: rgba(0, 0, 200, 0.3);
     border: 3px solid blue;
